# authenticample

./: .travis.yml  CMakeLists.txt  README  README.md
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.cpp
